Fix z-index dettaglio progettazione

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6934,6 +6934,7 @@ $size: 2;
       filter:blur(0);
     }
   }
+  z-index: 1;
   position: fixed;
   top: 0;
   left: 0;
